o Refactored jomc-cli artifact to include all non-provided transitive dependencies and to not conflict with any jomc artifacts provided to the tool.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc/trunk/jomc-cli@359 aee2edba-5628-49ba-b8b8-0e9d4ac63d57